# model-auditor

./: .gitignore  AGENTS.md  README.md  example.ipynb  pyproject.toml
model_auditor/: __init__.py  core.py  error_metrics.py  metric_inputs.py  metrics.py  schemas.py  utils.py
model_auditor/plotting/: __init__.py  plotters.py  schemas.py
tests/: test_auditor_score_distribution_plotting.py  test_bootstrap_confidence_intervals.py  test_error_evaluation.py  test_evaluate_metrics_correctness.py  test_feature_level_ordering.py  test_metric_inputs_correctness.py  test_metrics_correctness.py  test_result_styling.py  test_score_evaluation_plotting.py  test_threshold_optimization.py
